--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -5,9 +5,12 @@
 .header{
     background-color: lightgoldenrodyellow;
     border: 10px solid rgb(160, 160, 134);
-    height: 50px;
+    height: 70px;
     color: black;
-
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 .header p{
     text-align: center;
